--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "md5": "^2.2.1",
     "mdbreact": "^5.0.2",
     "react": "^16.13.1",
+    "react-bootstrap-icons": "^1.5.0",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
